// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fetch a communities threads 1`] = `
Object {
  "data": Object {
    "community": Object {
      "threadConnection": Object {
        "edges": Array [
          Object {
            "node": Object {
              "content": Object {
                "title": "Yet another thread",
              },
            },
          },
          Object {
            "node": Object {
              "content": Object {
                "title": "Yet another thread",
              },
            },
          },
          Object {
            "node": Object {
              "content": Object {
                "title": "Yet another thread",
              },
            },
          },
          Object {
            "node": Object {
              "content": Object {
                "title": "Another thread",
              },
            },
          },
          Object {
            "node": Object {
              "content": Object {
                "title": "The first thread! 🎉",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`should fetch a community 1`] = `
Object {
  "data": Object {
    "community": Object {
      "createdAt": "2016-12-31T23:00:00.000Z",
      "description": "The future of communities",
      "id": "1",
      "name": "Spectrum",
      "slug": "spectrum",
      "website": "https://spectrum.chat",
    },
  },
}
`;

exports[`should fetch a list of communities 1`] = `
Object {
  "data": Object {
    "communities": Array [
      Object {
        "createdAt": "2016-12-31T23:00:00.000Z",
        "description": "The future of communities",
        "id": "1",
        "slug": "spectrum",
        "website": "https://spectrum.chat",
      },
    ],
  },
}
`;

exports[`should fetch a list of community members 1`] = `
Object {
  "data": Object {
    "community": Object {
      "id": "1",
      "members": Object {
        "edges": Array [
          Object {
            "cursor": "Mi0x",
            "node": Object {
              "isBlocked": false,
              "isMember": true,
              "isModerator": false,
              "isOwner": false,
              "reputation": 101,
              "user": Object {
                "id": "2",
              },
            },
          },
          Object {
            "cursor": "My0y",
            "node": Object {
              "isBlocked": false,
              "isMember": true,
              "isModerator": false,
              "isOwner": false,
              "reputation": 100,
              "user": Object {
                "id": "3",
              },
            },
          },
          Object {
            "cursor": "OC0z",
            "node": Object {
              "isBlocked": false,
              "isMember": true,
              "isModerator": false,
              "isOwner": false,
              "reputation": 100,
              "user": Object {
                "id": "8",
              },
            },
          },
          Object {
            "cursor": "MS00",
            "node": Object {
              "isBlocked": false,
              "isMember": true,
              "isModerator": false,
              "isOwner": true,
              "reputation": 100,
              "user": Object {
                "id": "1",
              },
            },
          },
        ],
        "pageInfo": Object {
          "hasNextPage": false,
          "hasPreviousPage": null,
        },
      },
    },
  },
}
`;
